@@ -261,6 +261,10 @@
 			<code>org.eclipse.sirius</code>
 		</h4>
 		<ul>
+			<li><span class="label label-success">Added</span> The classes 
+				<code>org.eclipse.sirius.business.api.image.ImageManager</code> and 
+				<code>org.eclipse.sirius.business.api.image.Base64ImageHelper</code> have been added to support image management such as image creation from base64 string or image path serialization.
+			</li>
 			<li><span class="label label-success">Added</span> The class 
 				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache</code> has been added. This cache allows to avoid redundant computing to find impacted DRepresentationDescriptors returned by 
 				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinder.getImpactedRepresentationDescriptors</code>.
