@@ -32,6 +32,7 @@ h3. Developer-Visible Changes
 
 h4. Changes in @org.eclipse.sirius@
 
+* <span class="label label-success">Added</span> The classes @org.eclipse.sirius.business.api.image.ImageManager@ and @org.eclipse.sirius.business.api.image.Base64ImageHelper@ have been added to support image management such as image creation from base64 string or image path serialization.
 * <span class="label label-success">Added</span> The class @org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache@ has been added. This cache allows to avoid redundant computing to find impacted DRepresentationDescriptors returned by @org.eclipse.sirius.business.api.query.SiriusReferenceFinder.getImpactedRepresentationDescriptors@.
 * <span class="label label-success">Added</span> @org.eclipse.sirius.business.api.query.SiriusReferenceFinder.CACHE@ is a convenience to use @org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache@.
 * <span class="label label-info">Modified</span> @org.eclipse.sirius.viewpoint.SiriusPlugin@ has been renamed to @org.eclipse.sirius.tools.api.SiriusPlugin@
